--- a/AndEx01_Hello/app/src/main/res/layout/frame_lay02.xml
+++ b/AndEx01_Hello/app/src/main/res/layout/frame_lay02.xml
@@ -12,7 +12,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="Change Image!!"
+            android:text="Change Imge!!"
             android:textSize="50dp"
             android:gravity="center"
             android:textColor="#618c29"
