select 기능해야함

--- a/AndDB01/app/src/main/res/layout/mem_update.xml
+++ b/AndDB01/app/src/main/res/layout/mem_update.xml
@@ -14,7 +14,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:text="**Insert**"
+            android:text="**Update**"
             android:textSize="35dp"
             android:gravity="center|bottom"/>
 
@@ -34,12 +34,10 @@
                 android:textColor="#ffffff"/>
 
             <EditText
-                android:id="@+id/editName"
                 android:layout_width="260dp"
                 android:layout_height="wrap_content"
                 android:textColor="#89d1ce"
                 android:background="#ffffff"
-
                 android:textSize="30dp"
                 android:layout_margin="3dp"/>
 
@@ -60,12 +58,10 @@
                 android:textColor="#ffffff"/>
 
             <EditText
-                android:id="@+id/editId"
                 android:layout_width="260dp"
                 android:layout_height="wrap_content"
                 android:textColor="#89d1ce"
                 android:background="#ffffff"
-
                 android:textSize="30dp"
                 android:layout_margin="3dp"/>
 
@@ -86,12 +82,10 @@
                 android:textColor="#ffffff"/>
 
             <EditText
-                android:id="@+id/editPwd"
                 android:layout_width="260dp"
                 android:layout_height="wrap_content"
                 android:textColor="#89d1ce"
                 android:background="#ffffff"
-
                 android:textSize="30dp"
                 android:layout_margin="3dp"/>
 
@@ -112,12 +106,10 @@
                 android:textColor="#ffffff"/>
 
             <EditText
-                android:id="@+id/editEmail"
                 android:layout_width="260dp"
                 android:layout_height="wrap_content"
                 android:textColor="#89d1ce"
                 android:background="#ffffff"
-
                 android:textSize="30dp"
                 android:layout_margin="3dp"/>
 
@@ -138,13 +130,11 @@
                 android:textColor="#ffffff"/>
 
             <EditText
-                android:id="@+id/editPhone"
                 android:layout_width="260dp"
                 android:layout_height="wrap_content"
-                android:textSize="30dp"
                 android:textColor="#89d1ce"
                 android:background="#ffffff"
-
+                android:textSize="30dp"
                 android:layout_margin="3dp"/>
 
         </LinearLayout>
@@ -164,12 +154,10 @@
                 android:textColor="#ffffff"/>
 
             <EditText
-                android:id="@+id/editAddr"
                 android:layout_width="260dp"
                 android:layout_height="wrap_content"
                 android:textColor="#89d1ce"
                 android:background="#ffffff"
-
                 android:textSize="30dp"
                 android:layout_margin="3dp"/>
 
@@ -181,22 +169,21 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/join"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="JOIN"
-                android:layout_margin="5dp"
+                android:text="update"
                 android:textColor="#ffffff"
-                android:background="#89d1ce" />
+                android:background="#89d1ce"
+                android:layout_margin="5dp"/>
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:layout_margin="5dp"
-                android:text="CANCEL"
-                android:background="#89d1ce"
-                android:textColor="#ffffff"/>
+                android:text="update"
+                android:textColor="#ffffff"
+                android:background="#89d1ce" />
         </LinearLayout>
 
 
